tests/negative/typecheck/product-len.orng
fn main() -> Int
    let x: (Int, Int, Int) = (3, '3')
    x[0]